--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
  <head>
   <meta charset="latin-1">
   <meta http-equiv="X-UA-Compatible" content="IE-edge">
-  <meta name="viewport" content=Width=device-width, initial-scale=1">
-  <title>Hello, world!</title>
+  <meta name="viewport" content="Width=device-width, initial-scale=1">
+  <title>Meine Webseite mit Git!</title>
   <!-- Bootstrap -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
  </head>
  <body>
-  <h1>Hello, world!</h1>
+  <h1>Hallo Git!</h1>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"</script>
+  <script src="js/bootstrap.mim.js"></script>
  </body>
 </html>
