Startseite: Problem xy behoben weil ... wurde ... darum ... hdfgf hfdhdf

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   <link href="css/bootstrap.min.css" rel="stylesheet">
  </head>
  <body>
-  <h1>Hallo Git!</h1>
+  <h1>Juhu!</h1>
+  <h2>Hello Git!!</h2>
+  <h2>Hello Git!</h2>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"</script>
   <script src="js/bootstrap.mim.js"></script>
  </body>
