Index: Added bla

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <h1>Juhu!</h1>
   <h2>Hello Git!!</h2>
   <h2>Hello Git!</h2>
+  <h2>Bla!</h2>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"</script>
   <script src="js/bootstrap.mim.js"></script>
  </body>
