--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
   <h2>Bla!</h2>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"</script>
   <script src="js/bootstrap.mim.js"></script>
+  <h1>Hallo Git!!</h1>
  </body>
 </html>
